# insta-CLI

./: .gitignore  README.md  pyproject.toml
src/instacli/: __init__.py  cli.py  config.py  main.py
src/instacli/ai/: __init__.py  base.py  factory.py  providers.py
src/instacli/backend/: __init__.py  app.py  routes.py  websocket.py
src/instacli/data/: __init__.py  database.py  models.py
src/instacli/instagram/: __init__.py  client.py
src/instacli/services/: __init__.py  insta_service.py
