[project]
name = "instacli"
version = "0.1.0"
description = "CLI-based Instagram experience with AI-assisted distraction-free features."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "CTO.new", email = "support@cto.new" }]
dependencies = [
  "textual>=0.52.1",
  "fastapi>=0.110.0",
  "uvicorn>=0.27.0",
  "sqlalchemy>=2.0.25",
  "aiosqlite>=0.19.0",
  "pydantic>=2.6.0",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
openai = ["openai>=1.12.0"]
anthropic = ["anthropic>=0.17.0"]
ollama = ["ollama>=0.1.7"]
postgres = ["asyncpg>=0.29.0"]

[project.scripts]
instacli = "instacli.main:main"

[tool.setuptools.package-data]
instacli = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
